--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -18,12 +18,21 @@ html {
   margin: 0;
   padding: 0;
   font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.5px;
 }
 
 /* body  */
 body {
-  background: #232526; /* fallback for old browsers */
-  background: linear-gradient(to bottom, #5a5c5e, #232526);
+  background: black; /* fallback for old browsers */
+  background-color: #000000;
+  background-image: linear-gradient(-315deg, #000000 0%, #2c3e50 74%);
+}
+
+#bootstrap-overrides .container-lg {
+  background-color: #2d3436;
+  background-image: linear-gradient(315deg, #2d3436 0%, #131212 74%);
+  color: white;
 }
 
 img {
@@ -59,8 +68,8 @@ img {
 
 #bootstrap-overrides .nav-link:hover,
 .navbar-brand:hover {
-  box-shadow: #28a745 0px 2px 8px;
-  color: #28a745;
+  box-shadow: #ffc107 0px 2px 8px;
+  color: #ffc107;
 }
 
 .search--fs {
@@ -102,10 +111,6 @@ img {
   background: rgb(196, 194, 194);
   border-radius: 50%;
   /* padding-right: 1.5rem; */
-}
-
-.footer img:hover {
-  color: #64bb5d;
 }
 
 .footer img:hover {
