--- a/assets/css/comment--slider.css
+++ b/assets/css/comment--slider.css
@@ -1,3 +1,14 @@
+.comment-container {
+  background: url("../../img/happy_customer.png") left no-repeat;
+  background-size: contain;
+}
+
+@media (max-width: 768px) {
+  .comment-container {
+    background: none;
+  }
+}
+
 .comment-slider {
   position: relative;
   min-height: 20rem;
